Use class rather then string to construct injector source