@@ -7,21 +7,21 @@ import static java.text.MessageFormat.format;
 
 final class InjectorSourceFactory {
 
-    private final String injectorSourceClassName;
+    private final Class<?> injectorSourceClass;
 
     InjectorSourceFactory() {
         this(null);
     }
 
-    InjectorSourceFactory(String injectorSourceClassName) {
-        this.injectorSourceClassName = injectorSourceClassName;
+    InjectorSourceFactory(Class<?> injectorSourceClass) {
+        this.injectorSourceClass = injectorSourceClass;
     }
 
     InjectorSource create() {
-        if (injectorSourceClassName == null) {
+        if (injectorSourceClass == null) {
             return createDefaultScenarioModuleInjectorSource();
         } else {
-            return instantiateUserSpecifiedInjectorSource(injectorSourceClassName);
+            return instantiateUserSpecifiedInjectorSource(injectorSourceClass);
         }
     }
 
@@ -29,15 +29,13 @@ final class InjectorSourceFactory {
         return () -> Guice.createInjector(Stage.PRODUCTION, CucumberModules.createScenarioModule());
     }
 
-    private InjectorSource instantiateUserSpecifiedInjectorSource(String injectorSourceClassName) {
+    private InjectorSource instantiateUserSpecifiedInjectorSource(Class<?> injectorSourceClass) {
         try {
-            return (InjectorSource) Class
-                    .forName(injectorSourceClassName, true, Thread.currentThread().getContextClassLoader())
-                    .newInstance();
+            return (InjectorSource) injectorSourceClass.getConstructor().newInstance();
         } catch (Exception e) {
             String message = format("Instantiation of ''{0}'' failed. Check the caused by exception and ensure your" +
                     "InjectorSource implementation is accessible and has a public zero args constructor.",
-                injectorSourceClassName);
+                injectorSourceClass.getName());
             throw new InjectorSourceInstantiationFailed(message, e);
         }
     }
